--- a/scatter.ipynb
+++ b/scatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,9 @@
     "x = [1, 2, 3, 4, 5]\n",
     "y = [1, 4, 9, 16, 25]\n",
     "\n",
-    "plt.scatter(x, y)"
+    "plt.scatter(x, y)\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
